--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.44.3",
     "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.0.0-rc.3",
     "vite": "^4.3.9",
     "web-vitals": "^2.1.4"
   },
